<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/selectedPlayerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/name_and_package"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/noPlayersText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_players_found"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

    <Button
        android:id="@+id/showAllAppsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_apps" />

    <TextView
        android:id="@+id/mappingHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/mapping_header"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ourComponentsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/helpMainActivity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:src="@mipmap/ic_help" />

            <TextView
                android:id="@+id/mainActivityLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mainactivity"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/mainActivitySpinner"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/helpPcmPlayerActivity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:src="@mipmap/ic_help" />

            <TextView
                android:id="@+id/pcmPlayerActivityLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pcmplayeractivity"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/pcmPlayerActivitySpinner"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/helpMediaService"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:src="@mipmap/ic_help" />

            <TextView
                android:id="@+id/mediaServiceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mediaservice"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/mediaServiceSpinner"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveMappingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_mapping"
        android:visibility="gone" />
</LinearLayout>